--- a/sunkakar-portfolio/public/css/media-queries.css
+++ b/sunkakar-portfolio/public/css/media-queries.css
@@ -178,7 +178,7 @@
    ul#nav li a {  
       display: block;    
       margin: 0;
-      padding: 0;      
+      /*padding: 0;*/      
       margin: 12px 0; 
       line-height: 16px; /* reset line-height from 48px */
       border: none;
